<resources>
    <string name="app_name">TestProject</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузить</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="slideshow">Слайдшоу</string>
    <string name="tools">Инструменты</string>
    <string name="mobile_edition">Мобильная версия</string>
    <string name="tablet_edition">Планшетная версия</string>
    <string name="hello">Привет)</string>
    <string name="new_posts">New</string>
    <string name="top">Top</string>
    <string name="change_view">изменить вид</string>

    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="finish_load">конец загрузки</string>
    <string name="start_load">начало загрузки</string>
    <string name="clear">очистить</string>
    <string name="enter_list_size">введите размер списка</string>
    <string-array name="multithreading_items">
        <item>Handler</item>
        <item>AsyncTask</item>
        <item>AsyncTaskLoader</item>
        <item>IntentService</item>
    </string-array>

    <string name="enter_number">введите число</string>
    <string name="too_long_number">слишком большое число</string>
    <string name="service">Сервис</string>

</resources>
